tests/machine/x/go/load_yaml.error
run error: exit status 1
# command-line-arguments
tests/machine/x/go/load_yaml.go:21:75: undefined: v
tests/machine/x/go/load_yaml.go:24:13: invalid operation: r (variable of type map[string]any) is not an interface
tests/machine/x/go/load_yaml.go:28:15: undefined: Adults
tests/machine/x/go/load_yaml.go:29:16: undefined: Adults
tests/machine/x/go/load_yaml.go:33:32: undefined: Adults
